<resources>
    <string name="app_name">Notes App</string>
    <string name="desc">Welcome to the notes taking App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="notes">Notes</string>
    <string name="are_you_sure_you_want_to_delete_n_this_note">Are you sure you want to delete\n this note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
</resources>