<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:backgroundTint="#ABABAB"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/sixteen_dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_note"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:fontFamily="@font/product_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/no"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:fontFamily="@font/product_bold"
        android:background="@drawable/no_background"
        android:textColor="@color/black"
        android:id="@+id/no"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/yes"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:fontFamily="@font/product_bold"
        android:background="@drawable/yes_background"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:id="@+id/yes"
        />

</LinearLayout>