<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.HomeFragment"
    android:layout_margin="@dimen/sixteen_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageButton
            android:layout_width="@dimen/thirtysix_dp"
            android:layout_height="@dimen/thirtysix_dp"
            android:background="@drawable/filter"
            android:id="@+id/show_all"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:background="@drawable/priority_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="@font/product_bold"
            android:textColor="@color/red"
            android:textSize="@dimen/sixteen_sp"
            android:id="@+id/filter_high"
            />

        </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:background="@drawable/priority_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="@font/product_bold"
            android:textColor="@color/yellow"
            android:textSize="@dimen/sixteen_sp"
            android:id="@+id/filter_medium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:background="@drawable/priority_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="@font/product_bold"
            android:textColor="@color/green"
            android:textSize="@dimen/sixteen_sp"
            android:id="@+id/filter_low"
            />
    </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:id="@+id/recycler_view"
        />

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/FAB"
        android:backgroundTint="@color/red"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_margin="@dimen/sixteen_dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>